# tinynurbs

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Findglm.cmake  LICENSE  README.md  main.cpp  ospl.sln
cmake/modules/: FindGLM.cmake
docs/: README.md
include/tinynurbs/: tinynurbs.h
include/tinynurbs/core/: basis.h  check.h  curve.h  evaluate.h  modify.h  surface.h
include/tinynurbs/io/: obj.h
include/tinynurbs/util/: array2.h  util.h
nurbstk/: array2.h  basis.cpp  basis.h  bspline_basis.cpp  check.h  curve.cpp  curve.h  evaluate.cpp  evaluate.h  io.h  knots.cpp  knots.h  nurbs_surface.h  refine.h  surface.cpp  surface.h  util.cpp  util.h
nurbstk/core/: basis.h  check.h  evaluate.h
nurbstk/geometry/: curve.h  surface.h
nurbstk/io/: obj.h
nurbstk/modify/: knots.h
nurbstk/util/: util.cpp  util.h
openspline/: array2.h  bspline_basis.cpp  bspline_basis.h  nurbs_curve.cpp  nurbs_curve.h  nurbs_evaluate.cpp  nurbs_evaluate.h  nurbs_knots.cpp  nurbs_knots.h  nurbs_surface.cpp  nurbs_surface.h  surface.h  util.cpp  util.h
st/: array2.h  bspline_basis.cpp  bspline_basis.h  nurbs_curve.cpp  nurbs_curve.h  nurbs_evaluate.cpp  nurbs_evaluate.h  nurbs_knots.h  nurbs_surface.cpp  nurbs_surface.h  util.h
tests/: CMakeLists.txt  test_curve.cpp  test_rational_curve.cpp  test_rational_surface.cpp  test_surface.cpp
tinynurbs/: tinynurbs.h
tinynurbs/core/: basis.h  check.h  evaluate.h  modify.h
tinynurbs/geometry/: curve.cpp  curve.h  surface.cpp  surface.h
tinynurbs/io/: obj.h
tinynurbs/modify/: knot_insert.h  knots.h  refine.h
tinynurbs/util/: array2.h  util.cpp  util.h
